# audio-experiments

./: flake.nix  result
frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: input.ts  midi.ts
frontend/src/lib/components/: experiment.svelte  piano.svelte  snailwisdom.svelte  string.svelte
frontend/src/lib/components/control-rack/: rack.svelte  rackslot.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  crt.css  root.css
frontend/src/routes/experiments/bend_amount/: +page.svelte
frontend/src/routes/experiments/freq2midi/: +page.svelte
frontend/src/routes/experiments/js-sine/: +page.svelte
frontend/src/routes/experiments/js_sine/: +page.svelte
frontend/src/routes/experiments/midi2freq/: +page.svelte
frontend/src/routes/experiments/string_length/: +page.svelte
wasm/: .gitignore  Cargo.toml  Makefile  index.html
wasm/bend_amount/: Cargo.toml
wasm/bend_amount/src/: lib.rs
wasm/core/: Cargo.toml
wasm/core/src/: midi.rs
wasm/freq2midi/: Cargo.toml
wasm/midi2freq/: Cargo.toml
wasm/midi2freq/src/: lib.rs
wasm/string_length/: Cargo.toml
wasm/string_length/src/: lib.rs
