[package]
name = "audio-experiment"
version = "0.1.0"
authors = ["vagahbond <vagahbond@pm.me>"]
description = "My journey into audio programming"
license = "MIT/Apache-2.0"
repository = "https://github.com/vagahbond/audio-experiments"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.114"
