[package]
name = "midi2freq"
version = "0.1.0"
authors = ["vagahbond <vagahbond@pm.me>"]
description = "Midi to frequency"
license = "MIT/Apache-2.0"
repository = "https://github.com/vagahbond/audio-experiments"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[dependencies]
core = { version = "0.1.0", path = "../core" }
wasm-bindgen = "0.2.114"
